using System.Collections;
using System.Collections.Generic;
using UnityEngine;

public class ConstantsString : MonoBehaviour
{
    //AnimationController
    public static string IsStart = "isStart";
    public static string IsWalking = "isWalking";
    public static string IsDeath = "isDeath";

    public static string InputX = "inputX";
    public static string InputY = "inputY";

    public static string SaveX = "saveX";
    public static string SaveY = "saveY";


   


}
